# cmake_fw

cmake/: MainProject.cmake
example/: CMakeLists.txt
example/app/: CMakeLists.txt
project/: MainProject.cmake  project.cmake
